# GEMMA3.cpp-MODEL-IN-FPGA

./: README.md
KERNAL_FORWARD/: KERNAL_FORWARD.h  kernel_forward_2.cpp
ggml/src/: CMakeLists.txt
ggml/src/ggml-cpu/: CMakeLists.txt  fpga_host.cpp  fpga_host.h  ggml-cpu.c
include/: llama.h
src/: CMakeLists.txt  fpga_host.cpp  fpga_host.h  llama-model.cpp  llama.cpp
tools/main/: CMakeLists.txt  main.cpp
